feat: Optimize PDF generation and update assets
Bundle jspdf and jspdf-autotable for improved performance.
Update NASIDA logo asset path to a direct SVG URL for consistency.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     "react": "https://esm.sh/react@^19.1.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react/": "https://esm.sh/react@^19.1.0/",
-    "jspdf": "https://esm.sh/jspdf@^2.5.1",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^3.8.2"
+    "jspdf": "https://esm.sh/jspdf@^2.5.1?bundle",
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^3.8.2?bundle"
   }
 }
 </script>
