--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
         theme: {
           extend: {
             colors: {
-              primary: 'rgb(var(--color-primary) / <alpha-value>)',
-              secondary: 'rgb(var(--color-secondary) / <alpha-value>)',
-              accent: 'rgb(var(--color-accent) / <alpha-value>)',
-              neutral: 'rgb(var(--color-neutral) / <alpha-value>)',
-              'base-100': 'rgb(var(--color-base-100) / <alpha-value>)',
-              info: 'rgb(var(--color-info) / <alpha-value>)',
-              success: 'rgb(var(--color-success) / <alpha-value>)',
-              warning: 'rgb(var(--color-warning) / <alpha-value>)',
-              error: 'rgb(var(--color-error) / <alpha-value>)',
+              primary: '#006A3E', // Official NASIDA Green
+              secondary: '#008C52', 
+              accent: '#FFCC00', // NASIDA Brand Gold
+              neutral: '#334155',
+              'base-100': '#F8FAFC',
+              success: '#006A3E',
+              warning: '#FFCC00',
+              error: '#EF4444',
               'nasida-green': {
                 50: '#f0fdf4',
                 100: '#dcfce7',
-                500: '#22c55e',
-                700: '#15803d',
-                800: '#166534',
-                900: '#006A3E', // Deep NASIDA Green
+                500: '#008C52',
+                700: '#005230',
+                800: '#003D24',
+                900: '#006A3E', // Official Primary Green
               }
             },
             backgroundImage: {
@@ -39,17 +38,8 @@
     <style type="text/tailwindcss">
       @layer base {
         :root {
-          /* Deep Green from NASIDA Logo */
-          --color-primary: 0 106 62; 
-          /* Brighter Green from One-Stop Shop Text */
-          --color-secondary: 34 197 94; 
-          --color-accent: 22 163 74; 
-          --color-neutral: 71 85 105;
-          --color-base-100: 240 253 244; /* Very light green tint */
-          --color-info: 56 189 248; 
-          --color-success: 34 197 94; 
-          --color-warning: 245 158 11; 
-          --color-error: 239 68 68; 
+          --color-primary: 0 106 62; /* #006A3E */
+          --color-accent: 255 204 0; /* #FFCC00 */
         }
         body {
           @apply bg-base-100 text-neutral antialiased;
